--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
   <link rel="manifest" href="./assets/site.webmanifest">
+  <script id="pb-script" data-api-key="Mjk4MjYxNzQ3OA__" 
+    data-autoload="" src="https://pixboost.com/libs/pixboost.bundle.min.js" async=""></script>
 </head>
 <body>
   <app-root></app-root>
